--- a/src/app/component/header/header.component.html
+++ b/src/app/component/header/header.component.html
@@ -6,7 +6,8 @@
             </i>
         </div>
         <div class="form-group" style="margin-left: 0px;">
-            <input type="text" class="form-control" placeholder="search products">
+            <input type="text" class="form-control" [(ngModel)]="searchTerm" (keyup)="search($event)"
+                placeholder="search products">
         </div>
         <span class="fas fa-search search-icon"></span>
         <button routerLink="/carts" id="cart" class="btn btn-primary">
