--- a/src/app/component/product/product.component.html
+++ b/src/app/component/product/product.component.html
@@ -1,27 +1,30 @@
 <div class="card-top container-fluid">
     <div class="container d-flex">
         <div class="item">
-            <a style="text-decoration: none;  cursor: pointer; width: 62px; margin-top: 5px;">
+            <a (click)="filter('')" style="text-decoration: none;  cursor: pointer; width: 62px; margin-top: 5px;">
                 <img src="https://rukminim1.flixcart.com/flap/128/128/image/f15c02bfeb02d15d.png?q=100" alt="">
                 <h6>All products</h6>
             </a>
         </div>
         <div class="item">
-            <a style="text-decoration: none;  cursor: pointer; width: 62px; margin-top: 5px;">
+            <a (click)="filter('electronics')"
+                style="text-decoration: none;  cursor: pointer; width: 62px; margin-top: 5px;">
                 <img src="https://media.istockphoto.com/id/166107706/photo/mobility-concept-with-digital-devices-on-laptop.jpg?s=2048x2048&w=is&k=20&c=RBBUk2gYaE40_nz6ifZRdReWahjuwoiiaM-JM8swrlU="
                     height="55px" style="margin-top: 10px;" alt="">
                 <h6>Electronics</h6>
             </a>
         </div>
         <div class="item">
-            <a style="text-decoration: none;  cursor: pointer; width: 62px; margin-top: 5px;">
+            <a (click)="filter('fashion')"
+                style="text-decoration: none;  cursor: pointer; width: 62px; margin-top: 5px;">
                 <img src="https://img.freepik.com/free-photo/portrait-smiling-beautiful-girl-her-handsome-boyfriend-laughing-happy-cheerful-couple-sunglasses_158538-5002.jpg?w=900&t=st=1689919188~exp=1689919788~hmac=ee64b64243bab4d64e1a62dcf2dd24a33ae6338d1baf3a3b0c66019ebf0fd115"
                     style="margin-top: 10px; height: 55px; " alt="">
                 <h6>Fashion</h6>
             </a>
         </div>
         <div class="item">
-            <a style="text-decoration: none; cursor: pointer; width: 62px; margin-top: 5px;">
+            <a (click)="filter('jewelery')"
+                style="text-decoration: none; cursor: pointer; width: 62px; margin-top: 5px;">
                 <img src="https://thumbs.dreamstime.com/b/shiny-vintage-jewelry-13989760.jpg?w=1200" alt=""
                     style="margin-top: 10px; height: 55px;">
                 <h6>Jwellery</h6>
@@ -31,7 +34,7 @@
 </div>
 <div class="container">
     <div class="row">
-        <ng-container *ngFor="let item of productList">
+        <ng-container *ngFor="let item of filterCategory | filter:searchKey:'title'">
             <div class="card col-md-3">
                 <img src="{{item.image}}" alt="">
                 <h5 style="white-space: nowrap;overflow: hidden;text-overflow: ellipsis;max-width: 100ch;">
